# sms.kiss-collection

./: .env.example  .gitignore  README.md  pyproject.toml  vps-changes.patch
.github/workflows/: deploy.yml
deploy/: SETUP_NGINX.md  deploy.sh
deploy/nginx/: sms-clips.samuel.ovh.conf
deploy/sudoers/: ia-kissing-web
deploy/systemd/: ia-kissing-web.service
openclaw/workspace-review/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
openclaw/workspace-review/scripts/: ia_kissing_dispatch.py  review_dispatch.sh
scripts/: getmorevids.py
src/ia_kissing_pipeline/: config.py  db.py  main.py  webapp.py  ziai.py
src/ia_kissing_pipeline/ingest/: __init__.py  fixture_ingest.py  ia_client.py  ia_ingest.py  store.py
src/ia_kissing_pipeline/jobs/: __init__.py  events.py
src/ia_kissing_pipeline/review/: __init__.py  batch_formatter.py  commands.py
src/ia_kissing_pipeline/scoring/: __init__.py  metadata_rules.py  rights_score.py  text_gate.py
src/ia_kissing_pipeline/utils/: time.py  timecode.py
src/ia_kissing_pipeline/video/: __init__.py  extract_clips.py  probe.py  sampling.py  scenedetect.py  skim.py  (+1 more)
tests/: test_config.py  test_ia_ingest.py  test_integration_cli.py  test_openclaw_review.py  test_review_flow.py  test_scoring.py  test_video_pipeline.py  test_video_sampling.py  test_webapp.py
tests/fixtures/: ia_items.json
ziai_kissing_detector/: .gitignore  README.md  pipeline.py  requirements.txt  segmentor.py  smoke_test.py  strict-segments-4240508520972-corrected.csv  test_pipeline.py  test_segmentor.py  vggish.py
(+2 files in other folders)
