[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ia-kissing-pipeline"
version = "0.1.0"
description = "Internet Archive kissing-scenes discovery pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "inference>=0.51.6; python_version < '3.14'",
    "pillow>=12.1.1",
    "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
ia-kissing-pipeline = "ia_kissing_pipeline.main:main"
ia-kissing-web = "ia_kissing_pipeline.webapp:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
